[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "tokvera"
version = "0.2.6"
description = "Lightweight multi-provider (OpenAI, Anthropic, Gemini) analytics tracking wrapper"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Tokvera"}
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["tokvera"]
include = ["tokvera/py.typed"]
